proxmox-talos/apps/finguard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finguard
  labels:
    name: finguard
